--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ZoranWang/JWTAUTHGuard",
+    "name": "zoranWang/jwt-auth-guard",
     "description": "jwt auth guard for laravel or lumen ,the version 5+",
     "type": "metapackage",
     "require": {
