--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Zoran\\JWTAuthGuard\\": "src"
+            "Zoran\\JwtAuthGuard\\": "src"
         }
     },
     "license": "MIT",
