--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
     "description": "jwt auth guard for laravel or lumen ,the version 5+",
     "require": {
         "php" : ">=7.0.0",
-        "illuminate/support": "~5.0"
+        "illuminate/support": "~5.0",
+        "tymon/jwt-auth": "^0.5.12"
     },
     "require_dev": {
         "phpunit/phpunit" : "4.*",
         "scrutinizer/ocular": "~1.1",
-        "squizlabs/php_codesniffer": "~2.3",
-        "tymon/jwt-auth": "^0.5.12"
+        "squizlabs/php_codesniffer": "~2.3"
     },
     "autoload": {
         "psr-4": {
