--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "jwt auth guard for laravel or lumen ,the version 5+",
     "require": {
         "php" : ">=7.0.0",
-        "illuminate/support": "^5.0",
-        "tymon/jwt-auth": "^1.0||^1.0"
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
+        "tymon/jwt-auth": "^1.0"
     },
     "require_dev": {
         "phpunit/phpunit" : "4.*",
